# ContentForge

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTRUCTIONS.txt  README.md  SECURITY.md  make_video.py  pyproject.toml  requirements.txt  setup.sh  wizard.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  labeler.yml  publish.yml  release.yml  stale.yml  welcome.yml
docs/: advanced.md  api.md  faq.md  gpu.md  index.html  index.md  quickstart.md  troubleshooting.md
example/: demo.sh  demo_full.sh
src/: captions.py  generator.py  research.py  stock.py  timer.py  topic.py  tts.py  utils.py  video_builder.py
wiki/: configuration.md  troubleshooting.md  workflow.md
