[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contentforge"
version = "1.1.0-alpha.1"
description = "Turn text scripts into videos automatically with AI voiceover, captions, and real stock footage. No gradient backgrounds, no looping clips, no API keys required."
readme = "README.md"
license = {text = "MIT"}
keywords = ["video-generation", "tts", "stock-footage", "ai-voiceover", "content-creation", "ffmpeg", "yt-dlp", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
requires-python = ">=3.13"
dependencies = [
    "edge-tts>=7.2.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Hroldddp/ContentForge"
Repository = "https://github.com/Hroldddp/ContentForge"
Documentation = "https://github.com/Hroldddp/ContentForge/wiki"
"Bug Tracker" = "https://github.com/Hroldddp/ContentForge/issues"

[project.scripts]
contentforge = "make_video:main"

[tool.setuptools]
py-modules = ["make_video", "wizard"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src/*"]
